[package]
name = "expert-system-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum_typed_multipart = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
tower-cookies = { version = "0.10", features = ["private"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

diesel = { version = "2.1", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }

sea-orm = { version = "1.0.0-rc.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "debug-print",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

utoipa = { version = "4.2", features = [
    "axum_extras",
    "preserve_order",
    "chrono",
] }
utoipa-swagger-ui = { version = "7.0", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
argon2 = { version = "0.5" }
aes-gcm-siv = "0.11"
bincode = { version = "1.3" }
http = "1.1"
dotenv = "0.15"
dotenv_codegen = "0.15"
futures = "0.3"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
