[package]
name = "expert-system-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }

axum = { version = "^0", features = ["macros"] }
axum_typed_multipart = "^0"
tokio = { version = "^1", features = ["full"] }
tower-cookies = { version = "^0", features = ["private"] }
tower-http = { version = "^0", features = ["fs", "cors", "trace"] }
sea-orm = { version = "^1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "debug-print",
] }
lettre = { version = "^0", features = ["tokio1", "tokio1-native-tls"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
utoipa = { version = "^4", features = [
    "axum_extras",
    "preserve_order",
    "chrono",
] }
utoipa-swagger-ui = { version = "^7", features = ["axum"] }
chrono = { version = "^0", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
argon2 = { version = "^0" }
aes-gcm-siv = "^0"
bincode = { version = "^1" }
http = "^1"
dotenv = "^0"
futures = "^0"
regex = "^1"
rand = "^0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "^0", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
