[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = "1.0.0-rc.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
utoipa = { version = "4.2", features = ["chrono"] }
axum = { version = "0.7", features = ["macros"] }
axum_typed_multipart = "0.11"
