[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = "^1"
chrono = { version = "^0", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
utoipa = { version = "^5", features = ["chrono"] }
axum = { version = "^0", features = ["macros"] }
axum_typed_multipart = "^0"
